src/test/deca/context/invalid/void_declare.deca
// Description:
//    Declaration d'un type void
//
// Resultats:
//
//
// Historique:
//    cree le 19/01/2025


{
    void b;
}